--- a/style.css
+++ b/style.css
@@ -1,84 +1,63 @@
 *{
-  margin: 0px;
-  padding: 0px;
-  font-family: 'Poppins', sans-serif;
-  box-sizing: border-box;
-
+margin: 0;
+padding: 0;
+font-family: 'Poppins',sans-serif;
+box-sizing: border-box;
 }
 body{
-  background-color: #262a2f;
+  background: #002339;
+  color: #fff;
 }
-.container{
-width: 400px;
-padding: 25px 35px;
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
-background: #fff;
-border-radius: 10px;
+.Container{
+  margin:12%;
+  width: 90%;
+  max-width: 700px;
 }
-.container p{
-  font-weight: 600;
-  font-size: 15px;
-  margin-bottom: 8px;
-}
-.container input{
+.display{
   width: 100%;
-  height: 50px;
-  border: 1px solid #494eea;
-  outline: 0;
-  padding: 10px;
-  margin: 10px 0 20px;
+  margin-top: 50px;
+  margin-bottom:30px ;
+  background: #fff;
+  color: #333;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 26px 20px;
   border-radius: 5px;
 }
-.container button{
-  width: 100%;
-  height: 50px;
-  background: #494eea;
-  color: #fff;
+.Container h1{
+  font-weight: 500;
+  font-size: 45px;
+}
+.Container h1 span{
+  color: #019f55;
+  border-bottom: 4px solid #019f55;
+  padding-bottom: 7px;
+
+}.display img{
+  width: 30px;
+  cursor: pointer;
+}
+.display input{
   border: 0;
   outline: 0;
+  font-size: 24px;
+}
+.Container button img{
+  width: 28px;
+  margin-right: 10px;
+}
+.Container button{
+  border: 0;
+  outline: 0;
+  background: #019f55;
+  color: #fff;
+  font-size: 22px;
+  font-weight: 300;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 16px 26px;
   border-radius: 5px;
-  box-shadow: 0 10px 10px rgb(0,0,0,1);
   cursor: pointer;
-  margin: 20px 0;
-  font-weight: 500;
-}
-#imgBox{
-  width: 200px;
-  border-radius: 5px;
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 1s;
-
-}
-#imgBox img{
-  width: 100%;
-  padding: 10px;
-}
-#imgBox.show-img{
-  max-height: 300px;
-  margin: 10px auto;
-  border: 1px solid #d1d1d1;
-}
-.error{
-  animation: shake 0.1s linear 10px;
-}
-@keyframes shake{
-  0%{
-    transform: translateX(0);
-  }
-  20%{
-    transform: translateX(-2px);
-  }
-  50%{
-    transform: translateX(0);
-  }
-  75%{
-    transform: translateX(20px);
-  }
-  100%{
-    transform: translateX(0);
-  }
 }
